# lydl-editor

./: CMakeLists.txt  Makefile  README.md
src/: buffer.c  buffer.h  constants.h  editor.c  editor.h  main.c  screen.c  screen.h  syntax.c  syntax.h  ui.c  ui.h  util.c  util.h  vector.c  vector.h
