cmake_minimum_required(VERSION 3.0.0)
project(lydl-editor)
add_compile_options(-std=c89 -pedantic -Wall -Wextra)
if(SANITIZE)
    add_compile_options(-fsanitize=${SANITIZE})
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=${SANITIZE}")
endif()
file(GLOB_RECURSE SOURCE_FILES src/*.c src/*.h)
add_executable(lydl ${SOURCE_FILES})
target_link_libraries(lydl ncurses)
